# gdd-app

./: .gitignore  Dockerfile.airflow  Dockerfile.fastapi  Dockerfile.nginx  Dockerfile.streamlit  Makefile  README.md  docker-compose.yaml  example.env  init-airflow.sh  pyproject.toml  pytest.ini  requirements.txt  system-architecture.md
.github/workflows/: ci-test-workflow.yml  container-scan.yml  iac-scan.yml
api_service/: dependencies.py  main.py
api_service/routers/: diagnostic_router.py  gdd_router.py  weather_router.py
api_service/services/: data_retrieval_service.py
dags/: bronze_fetch.py  bronze_layer_dag.py  silver_layer_dag.py
data/: data_2025-05-26.parquet  example.json  weatherdata_newdelhi.parquet  weatherdata_sample.parquet
data/bronze/year=2025/month=05/crop_id=maize/location_id=Belagavi/: data_2025-05-22.parquet  data_2025-05-23.parquet
data/bronze/year=2025/month=05/crop_id=maize/location_id=Chhindwara/: data_2025-05-22.parquet  data_2025-05-23.parquet
data/bronze/year=2025/month=05/crop_id=maize/location_id=Jalgaon/: data_2025-05-22.parquet  data_2025-05-23.parquet
data/bronze/year=2025/month=05/crop_id=maize/location_id=Katihar/: data_2025-05-22.parquet  data_2025-05-23.parquet
data/bronze/year=2025/month=05/crop_id=maize/location_id=Perambalur/: data_2025-05-22.parquet  data_2025-05-23.parquet
data/bronze/year=2025/month=05/crop_id=sorghum/location_id=Kitui/: data_2025-05-22.parquet  data_2025-05-23.parquet
data/bronze/year=2025/month=05/crop_id=sorghum/location_id=Machakos/: data_2025-05-22.parquet  data_2025-05-23.parquet
data/bronze/year=2025/month=05/crop_id=sorghum/location_id=Makueni/: data_2025-05-22.parquet  data_2025-05-23.parquet
data_fetcher/: config.py  fetcher.py  main.py  saver.py  validator.py
docs/: README.md  api-documentation.md  aws-services.md  containerisation.md  data-flow-and-modeling.md  reverse-proxy.md  security-architecture.md  system-architecture.md  terraform-iac.md  testing-plan.md  yrno-api-compliance.md
gdd_counter/: calculator.py  processor.py  writer.py
nginx/: nginx.conf.template
notebooks/: data_fetcher_test.ipynb  test_viz_bronze.ipynb  yrno-api-exploration.ipynb
scripts/: api.py  http_matrix.py  streamlit_app.py
terraform/: main.tf  variables.tf
terraform/user_data/: ec2-docker.sh  ec2-setup.sh  ec2-setup.tpl
tests/: __init__.py
tests/unit/: conftest.py  test_api_unit.py
tests/unit/api_service/routers/: test_gdd_router.py  test_weather_router.py
tests/utils/: http_status.py  http_variations.py
universal/: config.py  processing_utils.py  s3_utils.py
(+4 files in other folders)
