[project]
name = "gdd-app"
version = "0.1.0"
description = "GDD plant growth tracking application"
authors = [
    {name = "Eveliina Hampus",email = "eveliinahampus@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "starlette (>=0.46.2,<0.47.0)",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "ruff (>=0.11.7,<0.12.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "boto3 (>=1.38.8,<2.0.0)",
    "datetime (>=5.5,<6.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "testcontainers (>=4.10.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.poetry]
packages = [{include = "data_fetcher"}] 
