[tool.poetry]
name = "gdd-app"
version = "0.1.0"
description = "Application for GDD calculation, data fetching, and visualization."
authors = ["Eveliina Hampus <eveliinahampus@gmail.com>"] 
readme = "README.md"
packages = [
    { include = "universal" },
    { include = "scripts" },
    { include = "data_fetcher" },
    { include = "gdd_counter" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
requests = "^2.31.0"
pandas = "^2.2.2"
boto3 = "^1.34.100" # For S3/MinIO interaction
python-dotenv = "^1.0.1"
duckdb = "^0.10.2" 
pyarrow = "^16.0.0"
streamlit = "^1.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"